--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             background-color: black;
         }
     </style>
+    <link rel="icon" type="image/x-icon" href="./img/icon.png">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
