--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CMatrix Online</title>
+    <title>Matrix</title>
     <style>
         canvas {
             background-color: black;
